Tue Apr 27 22:53:33 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/run_test:

          Changed statistics command termination from SIGQUIT (which
          produces a core file) to SIGINT (which does not).

          Updated POD documentation.

        * performance-tests/Bench/doc/userguide.html:

          Updated documentation.

Tue Apr 27 18:39:41 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/reduce-latency-data.pl:

          Simplified the MAD determination.  Added a Pearson 2 parameter
          estimation of skewness for investigative purposes.

        * performance-tests/Bench/bin/run_test:

        * performance-tests/Bench/doc/userguide.html:

          Incorporated some more of Brian's comments.  Updated run_test
          man page with new statistics output filename decorator
          specification feature documentation.

        * performance-tests/Bench/src/Process.cpp:

          Extended signal handling to be a bit more robust.  Control can
          now fall out of the publication wait as well as allowing the
          subscription wait to be gracefully terminated as well.

Mon Apr 26 20:33:01 UTC 2010  Scott Harris  <harris_s@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastConfiguration.cpp:
        * Pdds/DCPS/transport/multicast/MulticastConfiguration.h:
        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:
        * tests/DCPS/Messenger/pub_multicast.ini:
        * docs/html/multicast/multicast.html:

          Added support to set TTL for multicast transport.

Sun Apr 26 00:35:23 UTC 2010  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/tests/thru/run_test.pl:

          Changed to add time to the run time of the client side to compensate
          for server side delay in starting repo.

Sat Apr 24 00:00:38 UTC 2010  Trevor Fields  <fields_t@ociweb.com>
